# nonebot-plugin-gspanel

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/: trans-miao-resources.js  update-char.py  update-resources.py  update-rules.js
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  publish-test.yml  publish.yml  update-char.yml  update-resources.yml  update-rules.yml
data/gspanel/: ReliquaryAffixExcelConfigData.json  calc-rule.json  char-alias.json  char-data.json  characters.json  hash-trans.json  jinjia.css  jinjia.html  list-0.2.7.css  list-0.2.7.html  name2id.json  panel-0.2.2.html  panel-0.2.3.css  panel-0.2.3.html  panel-0.2.5.html  panel-20221113.css  relic-append.json  style.css  team-0.2.20.html  team-0.2.5.css  team-0.2.5.html  team-0.2.7.css  team-0.2.7.html  team-alias.json  template.json  tpl.html  trans.json
nonebot_plugin_gspanel/: __init__.py  __utils__.py  __version__.py  calc_meta.py  data_convert.py  data_source.py  data_updater.py  html_render.py  reliquary_mark.py
resources/: calc-rule.json
resources/html/: common.css  detail.css  tpl.html
utils/: browser.py
