[tool.poetry]
name = "nonebot-plugin-gspanel"
version = "0.2.6"
description = "Genshin player cards plugin for NoneBot2"
authors = ["monsterxcn <monsterxcn@gmail.com>"]
documentation = "https://github.com/monsterxcn/nonebot-plugin-gspanel#readme"
license = "MIT"
homepage = "https://github.com/monsterxcn/nonebot-plugin-gspanel"
readme = "README.md"
keywords = ["nonebot", "nonebot2", "genshin", "panel", "card"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
nonebot2 = ">=2.0.0b3"
nonebot-adapter-onebot = ">=2.0.0b1"
httpx = ">=0.20.0, <1.0.0"
nonebot-plugin-htmlrender = ">=0.2.0.1"
playwright = ">=1.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"